--- a/q/166567.html
+++ b/q/166567.html
@@ -26,18 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>019</td><td>POSIX shell ShellShoccarjpn/Parsrs + uspengineerscommunity/Openusptukubai</td><td>221126T093901Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/254900#254900">鳴神裁四点一号</a></td></tr>
-<tr d-ix="1"><td>101</td><td>Java 10</td><td>180611T071315Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166619#166619">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>012</td><td>Jelly</td><td>180610T162851Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166599#166599">Jonathan</a></td></tr>
-<tr d-ix="3"><td>012</td><td>Stax</td><td>180610T011501Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166582#166582">recursiv</a></td></tr>
-<tr d-ix="4"><td>040</td><td>R</td><td>180610T133424Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166595#166595">Giuseppe</a></td></tr>
-<tr d-ix="5"><td>059</td><td>JavaScript ES2018</td><td>180610T014018Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166583#166583">Rick Hit</a></td></tr>
-<tr d-ix="6"><td>053</td><td>Perl 5.10.0</td><td>180609T221730Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166570#166570">wastl</a></td></tr>
-<tr d-ix="7"><td>030</td><td>Wolfram Language Mathematica</td><td>180610T102638Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166593#166593">alephalp</a></td></tr>
-<tr d-ix="8"><td>017</td><td>Jelly</td><td>180609T221242Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166569#166569">Erik the</a></td></tr>
-<tr d-ix="9"><td>063</td><td>Python</td><td>180609T223049Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166574#166574">SlayerGa</a></td></tr>
+<tr d-ix="0"><td>020</td><td>Ruby rcsv</td><td>241003T185817Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/275929#275929">Jordan</a></td></tr>
+<tr d-ix="1"><td>019</td><td>POSIX shell ShellShoccarjpn/Parsrs + uspengineerscommunity/Openusptukubai</td><td>221126T093901Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/254900#254900">鳴神裁四点一号</a></td></tr>
+<tr d-ix="2"><td>101</td><td>Java 10</td><td>180611T071315Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166619#166619">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>012</td><td>Jelly</td><td>180610T162851Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166599#166599">Jonathan</a></td></tr>
+<tr d-ix="4"><td>012</td><td>Stax</td><td>180610T011501Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166582#166582">recursiv</a></td></tr>
+<tr d-ix="5"><td>040</td><td>R</td><td>180610T133424Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166595#166595">Giuseppe</a></td></tr>
+<tr d-ix="6"><td>059</td><td>JavaScript ES2018</td><td>180610T014018Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166583#166583">Rick Hit</a></td></tr>
+<tr d-ix="7"><td>053</td><td>Perl 5.10.0</td><td>180609T221730Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166570#166570">wastl</a></td></tr>
+<tr d-ix="8"><td>030</td><td>Wolfram Language Mathematica</td><td>180610T102638Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166593#166593">alephalp</a></td></tr>
+<tr d-ix="9"><td>017</td><td>Jelly</td><td>180609T221242Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166569#166569">Erik the</a></td></tr>
+<tr d-ix="10"><td>063</td><td>Python</td><td>180609T223049Z</td><td><a href="https://codegolf.stackexchange.com/questions/166567/count-the-number-of-fields-in-each-csv-record/166574#166574">SlayerGa</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>POSIX shell (<a href="https://github.com/ShellShoccar-jpn/Parsrs" rel="nofollow noreferrer">ShellShoccar-jpn/Parsrs</a> + <a href="https://github.com/usp-engineers-community/Open-usp-Tukubai" rel="nofollow noreferrer">usp-engineers-community/Open-usp-tukubai</a>), 19 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a> <code>-rcsv</code>, 20 bytes</h1>
+<p>Reads from STDIN.</p>
+<pre class="lang-ruby prettyprint-override"><code>p CSV($&lt;).map &amp;:size
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72kqDSpcmW0km5RcnGZUuyCpaUlaboWWwoUnIPDNFRsNPVyEwsU1KyKM6tSIVJQFQtueusoeaTm5OTrKITnF-WkKCpxKSUmJirpKCUpKSUlAenk5GQlrqqqKp3KykoduKQCF1xSRyktszgDSClBzAQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>POSIX shell (<a href="https://github.com/ShellShoccar-jpn/Parsrs" rel="nofollow noreferrer">ShellShoccar-jpn/Parsrs</a> + <a href="https://github.com/usp-engineers-community/Open-usp-Tukubai" rel="nofollow noreferrer">usp-engineers-community/Open-usp-tukubai</a>), 19 bytes</h1>
 <p>Dependencies are</p>
 <ul>
 <li><a href="https://github.com/ShellShoccar-jpn/Parsrs/blob/ac17529b4951333921ac14a7f201ddc2ecda1fd9/parsrc.sh" rel="nofollow noreferrer">parsrc.sh <code>Version : 2017-07-18 02:39:39 JST</code></a></li>
@@ -63,7 +70,7 @@ count 1 1
 <p>Because Termux is not a completely POSIX-compatible so <code>command -p getconf PATH</code> fails, I am dropping the boilerplate to set PATH environment variable so the shell calls completely POSIX-compatible utilities first. Also because I am lazy to prepare Python 2, I am doing with COMMANDS.SH/count.</p>
 <p><a href="https://i.sstatic.net/WYmRQ.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/WYmRQ.png" alt="Example run on Termux but had some modification" /></a></p>
 </div>
-<div id="pu1" class="pu"><h1>Java 10, 101 bytes</h1>
+<div id="pu2" class="pu"><h1>Java 10, 101 bytes</h1>
 
 <pre class="lang-java prettyprint-override"><code>s-&gt;{for(var p:s.replaceAll(&quot;\&quot;[^\&quot;]*\&quot;&quot;,&quot;x&quot;).split(&quot;\n&quot;))System.out.println(p.split(&quot;,&quot;,-1).length);}
 </code></pre>
@@ -77,7 +84,7 @@ count 1 1
                         .length);}      //   And print the length of this array
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 12 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 12 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 
 <pre><code>ṣ”"m2FỴ=”,§‘
 </code></pre>
@@ -105,7 +112,7 @@ count 1 1
 
 <p>Maybe you prefer <a href="https://tio.run/##y0rNyan8///hzsWPGuYq5Ro93NX3cPeWI92PmtYABXQeNcz4//@/urq6jpIHUGW@jkJ4flFOiqISl1JiYqKSjlKSjpKSjg6QSEoC8pKTk5W4qqqqdCorK3XgShS44JI6SmmZxRlASgloJgA" rel="nofollow noreferrer"><code>ṣ”"m2ẎỴċ€”,‘</code></a> - <code>Ẏ</code> is tighten and <code>ċ€</code> counts the commas in each. </p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, <s>19</s> 12 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, <s>19</s> 12 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
 
 <pre><code>èJ§3‼}vAà○L&gt;
 </code></pre>
@@ -123,7 +130,7 @@ m       for each line, execute the rest of the program and output
 
 <p><a href="https://staxlang.xyz/#c=_%27%22%2F++%09split+*all*+of+standard+input+by+double+quote+characters%0A2%3A%3A+++%09keep+only+the+even+numbered+elements%0A%7Cj++++%09split+on+newlines+%28implicitly+concatenates+array+of+%22strings%22%29%0Am+++++%09for+each+line,+execute+the+rest+of+the+program+and+output%0A++%27,%23%5E%09count+the+number+of+commas+occurring+as+substrings,+and+increment&amp;i=,%22Hello,+World%21%22%0A%22aaa%22,%22b%22%22bb%22,%22ccc%22%0Azzz,yyy,%0A%22aaa%22,%22b+%0Abb%22,%22ccc%22,%22fish%22,%22%22&amp;a=1&amp;m=1" rel="nofollow noreferrer">Run this one</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, 40 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, 40 bytes</h1>
 
 
 
@@ -134,7 +141,7 @@ m       for each line, execute the rest of the program and output
 
 <p>Per the <a href="https://stat.ethz.ch/R-manual/R-devel/library/utils/html/count.fields.html" rel="nofollow noreferrer">documentation</a> of <code>count.fields</code>, fields with line breaks get a field count of NA for the initial line, so we filter them out.</p>
 </div>
-<div id="pu5" class="pu"><h1>JavaScript (ES2018), <s>42</s> 59 bytes</h1>
+<div id="pu6" class="pu"><h1>JavaScript (ES2018), <s>42</s> 59 bytes</h1>
 <pre><code>s=&gt;s.replace(/&quot;.+?&quot;/sg).split`\n`.map(c=&gt;c.split`,`.length)
 </code></pre>
 <p><div class="snippet" data-lang="js" data-hide="true" data-console="true" data-babel="false">
@@ -152,7 +159,7 @@ bb","ccc","fish",""`))</code></pre>
 </div>
 </p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>.10.0, <s>55</s> 53 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>.10.0, <s>55</s> 53 bytes</h1>
 
 
 
@@ -171,14 +178,14 @@ s/^.*$/            # replace each line
 say                # print
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 30 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 30 bytes</h1>
 
 <pre><code>Length/@ImportString[#,"CSV"]&amp;
 </code></pre>
 
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n6Zg@98nNS@9JEPfwTO3IL@oJLikKDMvPVpZR8k5OEwpVu1/AJBf4pDmoKQTo@SRmpOTr6MQnl@Uk6IYo8QVo5SYmBgDkkmKUQISSWB2cnIyUK6qqkqnsrJSB1mRAheyEiCdllmcAWbEKCn9BwA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 17 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 17 bytes</h1>
 
 <pre><code>=”"ÄḂżṣ⁷Ż¤ṣ€0,”,Ẉ
 </code></pre>
@@ -187,7 +194,7 @@ say                # print
 
 <p>-1 thanks to <a href="https://codegolf.stackexchange.com/users/53748/jonathan-allan">Jonathan Allan</a>. <em>duh duh duh...</em></p>
 </div>
-<div id="pu9" class="pu"><h1>Python, 63 bytes</h1>
+<div id="pu10" class="pu"><h1>Python, 63 bytes</h1>
 
 <pre><code>import csv
 def f(s):return map(len,csv.reader(s.split("\n"))
