--- a/q/275871.html
+++ b/q/275871.html
@@ -26,24 +26,22 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>210</td><td>Haskell</td><td>241003T175243Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275926#275926">Antonio </a></td></tr>
+<tr d-ix="0"><td>196</td><td>Haskell</td><td>241003T175243Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275926#275926">Antonio </a></td></tr>
 <tr d-ix="1"><td>152</td><td>Perl 5</td><td>241002T151123Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275903#275903">Kjetil S</a></td></tr>
 <tr d-ix="2"><td>025</td><td>Charcoal</td><td>240929T211400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275873#275873">Neil</a></td></tr>
 <tr d-ix="3"><td>105</td><td>JavaScript Node.js</td><td>240930T063843Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275877#275877">l4m2</a></td></tr>
 <tr d-ix="4"><td>027</td><td>Jelly</td><td>240929T210108Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275872#275872">Unrelate</a></td></tr>
 <tr d-ix="5"><td>142</td><td>Python 3.8 prerelease</td><td>240929T212142Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275874#275874">squarero</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 210 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>210</s>, 196 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>unlines.g
-g[]=[]
-g s=i[m](2*l+1)l:(i&quot;/&quot;l%[l-1,l-2..k+1]++(g.take l)s)#w#(i&quot;\\&quot;l%[0..k-1]++g e)where(!)=div;l=length s!2;k=l!2;m:e=drop l s
-(#)=zipWith(++)
+g s=1&amp;s&gt;&gt;i[m](2*l+1)l:(k&amp;map(i&quot;/&quot;l)[l-1,l-2..]++g(l&amp;s))#w#(k&amp;map(i&quot;\\&quot;l)[0..]++g e)where(#)=zipWith(++);l=div(length s)2;k=div l 2;m:e=drop l s
+(&amp;)=take
+i c n p=n&amp;(p&amp;w++c:w&gt;&gt;=id)
 w=&quot; &quot;:w
-(%)=map
-i[c]n p=[last$' ':[c|j==p]|j&lt;-[0..n-1]]
 </code></pre>
-<p><a href="https://tio.run/##RY2xTsMwFEV3f8WrQ1WbNIF2THlDhVCXgiohxOB6CK3ruHlxozolEpRvD4kYGO7RHc7VLfJQGqLuO4lgvXxZvS1XT/C42UCU/LADbruLJ@dNSC2zSqPSzEJApyot5rcUzyRlwvE7TmNFyWxKyTxNy3im41jYtMlLAySDjNqot7bbQbvvhWQQLBjZFuZsxEji3n0uCMl42xQQRvNFidSzygzuz6caCAITkcQvV7@7phBxLFmLHHjWMjGWWOU1c2qnPdSoKA/NzQQmmdpdj4i1vh4fkuHY98e6q3Lnh8EziPrSvDbntU8PEhTnU54P@dj9cW8O9r8V7lhS5U9cd78" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##RU5Pa4MwHL37KX5EkGSpbnpUIpQxeulGYYwd1IPTqJk/02DsAhv77K6l0B3e4/07vKG2o0Rcf0If9tuX3dt29wSPhwP44a/XiXI9aVRa2qj3erAiDmyeq2KqaHKHPGaY0jGYakMVuSfICgzjDYZJFFWc9xQDy5jv/NumLC@jh2sNkrlBzpL6THwr866WgXLOMhSt@qIodb8MYFmSjZcAEJJsSqVo56M5G@vRgImlHqWnoAENRuiAmsBx3qQuz4VqmecEAZK6daqVFucLz0DNaXld5r2OOgYFIRtSX/DRXLmVXf@vBvU54qSPpFr/AA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 152 bytes</h1>
 
