--- a/q/275906.html
+++ b/q/275906.html
@@ -26,13 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>195</td><td>Bash</td><td>241003T155715Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275923#275923">Themooni</a></td></tr>
-<tr d-ix="1"><td>007</td><td>Charcoal</td><td>241002T215157Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275907#275907">Neil</a></td></tr>
-<tr d-ix="2"><td>017</td><td>Jelly</td><td>241003T150222Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275921#275921">Unrelate</a></td></tr>
-<tr d-ix="3"><td>201</td><td>Python 3</td><td>241003T121136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275918#275918">Jitse</a></td></tr>
-<tr d-ix="4"><td>003</td><td>05AB1E</td><td>241003T095245Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275916#275916">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>124</td><td>JavaScript ES6</td><td>241003T205800Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275931#275931">Arnauld</a></td></tr>
+<tr d-ix="1"><td>195</td><td>Bash</td><td>241003T155715Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275923#275923">Themooni</a></td></tr>
+<tr d-ix="2"><td>007</td><td>Charcoal</td><td>241002T215157Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275907#275907">Neil</a></td></tr>
+<tr d-ix="3"><td>017</td><td>Jelly</td><td>241003T150222Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275921#275921">Unrelate</a></td></tr>
+<tr d-ix="4"><td>201</td><td>Python 3</td><td>241003T121136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275918#275918">Jitse</a></td></tr>
+<tr d-ix="5"><td>003</td><td>05AB1E</td><td>241003T095245Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275916#275916">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 195 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 124 bytes</h1>
+<p>Expects <code>(directions)(characters)</code> as 2 arrays and returns a matrix of characters.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>d=&gt;s=&gt;s.map((c,i)=&gt;m[y][x]=(y+=~-&quot;0012221&quot;[v=d[i]],x+=~-&quot;12221&quot;[v],c),m=[...b=d+0].map(_=&gt;[...b].fill(&quot; &quot;)),x=y=d.length)&amp;&amp;m
+</code></pre>
+<p><a href="https://tio.run/##bVHdbsIgFL73Kc7IYsBSbDunFwbv9g5LkC2sxcpSwbSN08zt1R0wtxmzfi3Q8/0AOa9qp7qyNds@ta7SpxU/VXzR@Zdt1BbjkhrCFxtxkGIvOT4k/DNFWZYXRZEjseOVMFLSfSz/FCUtCd1wwRh74VWSyRj1zBexItnKNA1GgAihe37gFWu0rfs1GQ43p7kYAAgQOY2QFJAKDwJJf5iC3tEJvadTOpMUubJXtbM3f4rCsxef13S9Mm2pOn0Z84sggIjLjG9kHlOPScgB5Ha6fWtNb2x9rZ3EM91H9TT6cv/3zYVV9CdpmhyTcZwew@SH41@Sv1H0FfGOd1eZs4jsnJ2fdUXI7bamVc3/o48fyAFbufZBlWuMRUWhkwT4At79to3uodUdcFjhiuDQI8/OPVM627lGs8bV2CtiF1WwKfbqjMXId/C8WlpEWKu3jSo1Hj9hSJaWjMb@ZJd1vLSQkNHtuI4EJBCN13uhFAWPVj2eToinP8jpCw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a> (with some whitespace removed)</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 195 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>s=&quot;$1&quot;
 e='echo -en'
 shift
@@ -62,7 +70,7 @@ shift
 <a href="https://i.sstatic.net/zxv2eB5n.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/zxv2eB5n.png" alt="overwriting test case" /></a>
 <a href="https://i.sstatic.net/Jpkt8GJ2.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/Jpkt8GJ2.png" alt="octagon! test case" /></a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 7 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 7 bytes</h1>
 <pre><code>ＧＨ✳✳Ａ²Ｓ
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjdNA_JzKtPz8zzyc3LyyzVcMotSk0sy8_OKNTzzCkpLNDQ1dRSMdBTAnOCSosy8dKCQ9ZLipORiqBHLo5V0y3KUYm86R0cb6ICgGRCaAqEJGBoBoSGQB5EDscxidZS0dXW1a7T1wVQEiAISNUqxECMB" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation: <code>PolygonHollow</code> is Charcoal's path text writing function. It has two modes of operation, one where each direction and path length is specified and one where there is an array of directions and a fixed path length. Here <code>Directions</code> is used to specify an array expression as the directions. However <code>PolygonHollow</code> takes <code>0</code> as right and <code>2</code> as up, so I have amended the test case appropriately. The path length of <code>2</code> is inclusive so that each subsequent step draws one additional character.</p>
@@ -75,7 +83,7 @@ shift
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjcdAvJzKtPz8zzyc3LyyzVcMotSk0sy8_OKNXwz80qLNQwNdBQ88wpKSzQ0NTV1FIygvOCSosy8dKCY9ZLipORiqGnLo5V0y3KUYm86R0cb6YCgCRCaAqEZGBoAoSGQB5EDsUxidZS0dXW1a7T1wVQEiAISNUqxECMB" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation: As the first solution but reflects the canvas to get the desired result.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 17 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 17 bytes</h1>
 <pre><code>ZẈ;&quot;$ÄZŒṬ€a&quot;o@/o⁶
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/z/q4a4OayWVwy1RRyc93LnmUdOaRKV8B/38R43b/j/c3R1tqKMbqwMkDcCkIZA0AJO6UNIATOqCxXVjQw8v5zq8XD9SM@tR4z4urv//NbgUFDRAGnXAmhWUEkFASVMHKm6kY6xjomOqY6ZjDpLNTy5JTM/PU4QpMAJKImGQkuKSxMyi5MTiVIQhcAiWVwBDhAkQaACEZkBoAjElvyy1qLwosyQzLx1VpQnYOaZgtWZgXYZAHkQOxALr1tbV1a7R1gdTESAKSNTAzAF6BazLCOw5YzQTzcHQAGqyIVSdEdjlBZlFiTnYSSVNLk0A" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -92,14 +100,14 @@ shift
                o⁶    then replace any remaining 0s with spaces.
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 201 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 201 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda d,s,p={},c=0,X={0},Y={0},S=sorted,T=(-1,1j-1,1j,1j+1,1,1-1j,-1j,-1j-1,0):s and f(d[1:],s[1:],{**p,c:s[0]},c+T[[*d,8][0]],X|{c.real},Y|{c.imag})or[[p.get(x+y*1j,' ')for y in S(Y)]for x in S(X)]
 </code></pre>
 <p><a href="https://tio.run/##bVHNboMwDL7zFFkvEDAd0L8JiadoD0yIQwYpY6KAkmxrRfvszAntuk3DxI7tz19ipz@p165djOM@adjhpWSkBAl9MlygSAJIkyG4wLPR20R2QvESdonjhxC@GYW/hxZCH/fXhYmAxpKwtiR7p8zCOAdp9OC6PRSxzIIcD/B2WeaW8JSjm0N6Hoq54KzBA/W2PrDqQjuRZf284so5eicX@W1i030nyInULdk6zzTX3nHyUpqPikslSUIcixAnM3eDMAcyY/qbUbjGI1jAElawho3OdoViVdc@3AARJn8sDZGK1aJgkt9JvsXkiZE7wyQByhplObF0H1x8ilrVbfUbuTTXWRns2lSF6E05vTPVnu97Z@/RmFQbVOcbD7ZiqiLT3OIP48ZIcGUOr7jI3LyvBWv@1zNqUcvSQy4B28M5mwnHeKLg8r1ROGt8ZZAUIxrW1C3XsCkbk17UrXJcHUYC3ie2raFTmI5f" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <p>Returns a 2D array of characters</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 3 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 3 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>2ŠΛ
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f/f6OiCc7P//4820gFBEyA0BUIzMDQAQkMgDyIHYpnEcmnr6mrXaOuDqQgQBSRqAA" rel="nofollow noreferrer">Try it online.</a></p>
