--- a/q/275906.html
+++ b/q/275906.html
@@ -26,20 +26,30 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>107</td><td>JavaScript ES6</td><td>241003T205800Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275931#275931">Arnauld</a></td></tr>
-<tr d-ix="1"><td>195</td><td>Bash</td><td>241003T155715Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275923#275923">Themooni</a></td></tr>
-<tr d-ix="2"><td>007</td><td>Charcoal</td><td>241002T215157Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275907#275907">Neil</a></td></tr>
-<tr d-ix="3"><td>017</td><td>Jelly</td><td>241003T150222Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275921#275921">Unrelate</a></td></tr>
-<tr d-ix="4"><td>201</td><td>Python 3</td><td>241003T121136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275918#275918">Jitse</a></td></tr>
-<tr d-ix="5"><td>003</td><td>05AB1E</td><td>241003T095245Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275916#275916">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>025</td><td>Vyxal</td><td>241004T001655Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275933#275933">lyxal</a></td></tr>
+<tr d-ix="1"><td>107</td><td>JavaScript ES6</td><td>241003T205800Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275931#275931">Arnauld</a></td></tr>
+<tr d-ix="2"><td>195</td><td>Bash</td><td>241003T155715Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275923#275923">Themooni</a></td></tr>
+<tr d-ix="3"><td>007</td><td>Charcoal</td><td>241002T215157Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275907#275907">Neil</a></td></tr>
+<tr d-ix="4"><td>017</td><td>Jelly</td><td>241003T150222Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275921#275921">Unrelate</a></td></tr>
+<tr d-ix="5"><td>201</td><td>Python 3</td><td>241003T121136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275918#275918">Jitse</a></td></tr>
+<tr d-ix="6"><td>003</td><td>05AB1E</td><td>241003T095245Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275916#275916">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 107 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 20 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 2.5 bytes</h1>
+<pre><code>2ø^
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwiMsO4XiIsIiIsIlsxLDIsMyw0LDUsNiw3XVxuXCJvY3RhZ29uIVwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
+<p>Bitstring:</p>
+<pre><code>01000011111001001000
+</code></pre>
+<p>Same idea as the 05ab1e answer but without the need for explicit swapping (it uses overloads). Uses the built in canvas digraph with length 2.</p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 107 bytes</h1>
 <p>Expects <code>(directions)(characters)</code>, where <em>directions</em> is an array of <code>[dx,dy]</code> vectors and <em>characters</em> is an array of characters. Returns a matrix of characters.</p>
 <pre class="lang-javascript prettyprint-override"><code>d=&gt;s=&gt;s.map((c,i)=&gt;y+=d[m[y][x]=c,i]?.[x+=d[i][0],1],m=[...b=d+0].map(_=&gt;[...b].fill(&quot; &quot;)),x=y=d.length)&amp;&amp;m
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=bVLRbtsgFJX2mK-4Q1MFNSZ2mqaTKrKn_cMkwipqsMvmQGR7W6J1X7KXaNo-avuaAk7TKJqPDfiec88FXX7-dl6b_a-a__ky1Pnbv581X_bhZWu1wbiilvDlLuNarMVOiq3kISTfMbGNMStFIWkp6ZoLxtg911khU-YdX6aIZLVtW4wAEUK3fMc1a41rhgdycbEeS_57dXcrJgACREkTJAWk4oNA0mdmRq_onF7TBb2RFPlqUI13r18Us8CefEHTD8p2lerNqc0RUQAJpx4jioBFwDz6APJfTfets4N1zbl2nvZ0ndSLlFeGv5GLq5Sf5Xn2mE3T9CFOYXh8cQonSnmzdMarM8-bhOLgXR50s-jbb2yn2v-PwX4iJ6z23XtVPWAsNIVeEuBL-B7KauCgU6dsDAlRHjedSsnQW8ihpCCK4-YS-8xIcht8WjNAZ_rgVmNNcOx5PzKVd71vDWt9g4Mi1VKxlmKfvHUYhRtxWK0cIqwzm1ZVBk8_YshWjlxOwwlP43jlICOXb6ZNIiCDlHheC-Uo5hg14MWcBPoHGe_Zfj_OTw" rel="nofollow noreferrer">Attempt This Online!</a> (with some whitespace removed)</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 195 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 195 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>s=&quot;$1&quot;
 e='echo -en'
 shift
@@ -69,7 +79,7 @@ shift
 <a href="https://i.sstatic.net/zxv2eB5n.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/zxv2eB5n.png" alt="overwriting test case" /></a>
 <a href="https://i.sstatic.net/Jpkt8GJ2.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/Jpkt8GJ2.png" alt="octagon! test case" /></a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 7 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 7 bytes</h1>
 <pre><code>ＧＨ✳✳Ａ²Ｓ
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjdNA_JzKtPz8zzyc3LyyzVcMotSk0sy8_OKNTzzCkpLNDQ1dRSMdBTAnOCSosy8dKCQ9ZLipORiqBHLo5V0y3KUYm86R0cb6ICgGRCaAqEJGBoBoSGQB5EDscxidZS0dXW1a7T1wVQEiAISNUqxECMB" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation: <code>PolygonHollow</code> is Charcoal's path text writing function. It has two modes of operation, one where each direction and path length is specified and one where there is an array of directions and a fixed path length. Here <code>Directions</code> is used to specify an array expression as the directions. However <code>PolygonHollow</code> takes <code>0</code> as right and <code>2</code> as up, so I have amended the test case appropriately. The path length of <code>2</code> is inclusive so that each subsequent step draws one additional character.</p>
@@ -82,7 +92,7 @@ shift
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjcdAvJzKtPz8zzyc3LyyzVcMotSk0sy8_OKNXwz80qLNQwNdBQ88wpKSzQ0NTV1FIygvOCSosy8dKCY9ZLipORiqGnLo5V0y3KUYm86R0cb6YCgCRCaAqEZGBoAoSGQB5EDsUxidZS0dXW1a7T1wVQEiAISNUqxECMB" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation: As the first solution but reflects the canvas to get the desired result.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 17 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 17 bytes</h1>
 <pre><code>ZẈ;&quot;$ÄZŒṬ€a&quot;o@/o⁶
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/z/q4a4OayWVwy1RRyc93LnmUdOaRKV8B/38R43b/j/c3R1tqKMbqwMkDcCkIZA0AJO6UNIATOqCxXVjQw8v5zq8XD9SM@tR4z4urv//NbgUFDRAGnXAmhWUEkFASVMHKm6kY6xjomOqY6ZjDpLNTy5JTM/PU4QpMAJKImGQkuKSxMyi5MTiVIQhcAiWVwBDhAkQaACEZkBoAjElvyy1qLwosyQzLx1VpQnYOaZgtWZgXYZAHkQOxALr1tbV1a7R1gdTESAKSNTAzAF6BazLCOw5YzQTzcHQAGqyIVSdEdjlBZlFiTnYSSVNLk0A" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -99,14 +109,14 @@ shift
                o⁶    then replace any remaining 0s with spaces.
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 201 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 201 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda d,s,p={},c=0,X={0},Y={0},S=sorted,T=(-1,1j-1,1j,1j+1,1,1-1j,-1j,-1j-1,0):s and f(d[1:],s[1:],{**p,c:s[0]},c+T[[*d,8][0]],X|{c.real},Y|{c.imag})or[[p.get(x+y*1j,' ')for y in S(Y)]for x in S(X)]
 </code></pre>
 <p><a href="https://tio.run/##bVHNboMwDL7zFFkvEDAd0L8JiadoD0yIQwYpY6KAkmxrRfvszAntuk3DxI7tz19ipz@p165djOM@adjhpWSkBAl9MlygSAJIkyG4wLPR20R2QvESdonjhxC@GYW/hxZCH/fXhYmAxpKwtiR7p8zCOAdp9OC6PRSxzIIcD/B2WeaW8JSjm0N6Hoq54KzBA/W2PrDqQjuRZf284so5eicX@W1i030nyInULdk6zzTX3nHyUpqPikslSUIcixAnM3eDMAcyY/qbUbjGI1jAElawho3OdoViVdc@3AARJn8sDZGK1aJgkt9JvsXkiZE7wyQByhplObF0H1x8ilrVbfUbuTTXWRns2lSF6E05vTPVnu97Z@/RmFQbVOcbD7ZiqiLT3OIP48ZIcGUOr7jI3LyvBWv@1zNqUcvSQy4B28M5mwnHeKLg8r1ROGt8ZZAUIxrW1C3XsCkbk17UrXJcHUYC3ie2raFTmI5f" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <p>Returns a 2D array of characters</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 3 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 3 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>2ŠΛ
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f/f6OiCc7P//4820gFBEyA0BUIzMDQAQkMgDyIHYpnEcmnr6mrXaOuDqQgQBSRqAA" rel="nofollow noreferrer">Try it online.</a></p>
