--- a/q/275906.html
+++ b/q/275906.html
@@ -26,15 +26,22 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>025</td><td>Vyxal</td><td>241004T001655Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275933#275933">lyxal</a></td></tr>
-<tr d-ix="1"><td>107</td><td>JavaScript ES6</td><td>241003T205800Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275931#275931">Arnauld</a></td></tr>
+<tr d-ix="0"><td>102</td><td>JavaScript ES6</td><td>241003T205800Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275931#275931">Arnauld</a></td></tr>
+<tr d-ix="1"><td>025</td><td>Vyxal</td><td>241004T001655Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275933#275933">lyxal</a></td></tr>
 <tr d-ix="2"><td>195</td><td>Bash</td><td>241003T155715Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275923#275923">Themooni</a></td></tr>
 <tr d-ix="3"><td>007</td><td>Charcoal</td><td>241002T215157Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275907#275907">Neil</a></td></tr>
 <tr d-ix="4"><td>017</td><td>Jelly</td><td>241003T150222Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275921#275921">Unrelate</a></td></tr>
 <tr d-ix="5"><td>201</td><td>Python 3</td><td>241003T121136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275918#275918">Jitse</a></td></tr>
 <tr d-ix="6"><td>003</td><td>05AB1E</td><td>241003T095245Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275916#275916">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 20 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 2.5 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 102 bytes</h1>
+<p>Expects <code>(directions)(characters)</code>, where <em>directions</em> is an array of <code>[dx,dy]</code> vectors and <em>characters</em> is an array of characters. Returns a matrix of characters.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>d=&gt;s=&gt;[...d,m=[...d+=x=y=d.length].map(_=&gt;[...d].fill(&quot; &quot;))].map(([X,Y],i)=&gt;m[y][x]=s[x+=X,y+=Y,i])&amp;&amp;m
+</code></pre>
+<p><a href="https://tio.run/##bVLRbuIwEHznK7bWqbIbxxBK6UNl3u4fqIzvZCUmdRVsFEc9UNtvp/ZCKUKXUbyOZ3Z2V86reTOx7t12KH1o7GEtD41cRLlQQoiGbyTGQu7kXjais74dXrTYmC39e9JosXZdRwkQxo4MVUv@rLljcrFRe612Wka1K@SS7wv5zJ1mt7ebw5MaAShQFUdoDsTkh4Dm38yU3/MZf@Bz/qg5CfVg2uBvfhTTxF68SRMH4/raRHtpc0YWAOLS44hJwjxhln2AhDfb/@vd4Hx7rZ1hTw@onmNelb6OXN5hflGWxUcxxrDMIS0fP05pIsyb4oz3V56PiMnJuzrpptk3bl1vuv@vyX6kR2Id@t@mfkn30HCImoFcwHsq24CEBm/I5SOlqnPTWEorp6GEioOanJtD9pvR7Cn5dHaA3sbktqYNoxEP6@Bj6KzoQksTiWVMLmPEa3CekvR7nHYrT5jo7bYztaXjPxSKlWd34zTc5TldeSjY3a9xiwQUgInXtUhJco41A53PWKI/2eEL" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a> (with some whitespace removed)</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 20 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 2.5 bytes</h1>
 <pre><code>2ø^
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwiMsO4XiIsIiIsIlsxLDIsMyw0LDUsNiw3XVxuXCJvY3RhZ29uIVwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -42,12 +49,6 @@
 <pre><code>01000011111001001000
 </code></pre>
 <p>Same idea as the 05ab1e answer but without the need for explicit swapping (it uses overloads). Uses the built in canvas digraph with length 2.</p>
-</div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 107 bytes</h1>
-<p>Expects <code>(directions)(characters)</code>, where <em>directions</em> is an array of <code>[dx,dy]</code> vectors and <em>characters</em> is an array of characters. Returns a matrix of characters.</p>
-<pre class="lang-javascript prettyprint-override"><code>d=&gt;s=&gt;s.map((c,i)=&gt;y+=d[m[y][x]=c,i]?.[x+=d[i][0],1],m=[...b=d+0].map(_=&gt;[...b].fill(&quot; &quot;)),x=y=d.length)&amp;&amp;m
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=bVLRbtsgFJX2mK-4Q1MFNSZ2mqaTKrKn_cMkwipqsMvmQGR7W6J1X7KXaNo-avuaAk7TKJqPDfiec88FXX7-dl6b_a-a__ky1Pnbv581X_bhZWu1wbiilvDlLuNarMVOiq3kISTfMbGNMStFIWkp6ZoLxtg911khU-YdX6aIZLVtW4wAEUK3fMc1a41rhgdycbEeS_57dXcrJgACREkTJAWk4oNA0mdmRq_onF7TBb2RFPlqUI13r18Us8CefEHTD8p2lerNqc0RUQAJpx4jioBFwDz6APJfTfets4N1zbl2nvZ0ndSLlFeGv5GLq5Sf5Xn2mE3T9CFOYXh8cQonSnmzdMarM8-bhOLgXR50s-jbb2yn2v-PwX4iJ6z23XtVPWAsNIVeEuBL-B7KauCgU6dsDAlRHjedSsnQW8ihpCCK4-YS-8xIcht8WjNAZ_rgVmNNcOx5PzKVd71vDWt9g4Mi1VKxlmKfvHUYhRtxWK0cIqwzm1ZVBk8_YshWjlxOwwlP43jlICOXb6ZNIiCDlHheC-Uo5hg14MWcBPoHGe_Zfj_OTw" rel="nofollow noreferrer">Attempt This Online!</a> (with some whitespace removed)</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 195 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>s=&quot;$1&quot;
