--- a/q/275906.html
+++ b/q/275906.html
@@ -35,11 +35,12 @@
 <tr d-ix="6"><td>003</td><td>05AB1E</td><td>241003T095245Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275916#275916">Kevin Cr</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1>JavaScript (ES6), 102 bytes</h1>
-<p>Expects <code>(directions)(characters)</code>, where <em>directions</em> is an array of <code>[dx,dy]</code> vectors and <em>characters</em> is an array of characters. Returns a matrix of characters.</p>
+<p>Expects <code>(directions)(characters)</code>, where <em>directions</em> is an array of <code>[dx,dy]</code> vectors and <em>characters</em> is a string. Returns a matrix of characters.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>d=&gt;s=&gt;[...d,m=[...d+=x=y=d.length].map(_=&gt;[...d].fill(&quot; &quot;))].map(([X,Y],i)=&gt;m[y][x]=s[x+=X,y+=Y,i])&amp;&amp;m
 </code></pre>
-<p><a href="https://tio.run/##bVLRbuIwEHznK7bWqbIbxxBK6UNl3u4fqIzvZCUmdRVsFEc9UNtvp/ZCKUKXUbyOZ3Z2V86reTOx7t12KH1o7GEtD41cRLlQQoiGbyTGQu7kXjais74dXrTYmC39e9JosXZdRwkQxo4MVUv@rLljcrFRe612Wka1K@SS7wv5zJ1mt7ebw5MaAShQFUdoDsTkh4Dm38yU3/MZf@Bz/qg5CfVg2uBvfhTTxF68SRMH4/raRHtpc0YWAOLS44hJwjxhln2AhDfb/@vd4Hx7rZ1hTw@onmNelb6OXN5hflGWxUcxxrDMIS0fP05pIsyb4oz3V56PiMnJuzrpptk3bl1vuv@vyX6kR2Id@t@mfkn30HCImoFcwHsq24CEBm/I5SOlqnPTWEorp6GEioOanJtD9pvR7Cn5dHaA3sbktqYNoxEP6@Bj6KzoQksTiWVMLmPEa3CekvR7nHYrT5jo7bYztaXjPxSKlWd34zTc5TldeSjY3a9xiwQUgInXtUhJco41A53PWKI/2eEL" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a> (with some whitespace removed)</p>
+<p><a href="https://tio.run/##bVLRbuIwEHznK7bWqbIbxxBK6UNl3u4fqIzvZCUmdRVsFEc9UNtvp/ZCKUKXUbyOZ3Z2V86reTOx7t12KH1o7GEtD41cRLlQQoiGbyTGQu7kXjais74dXrTYmC39e9JosXZdRwkQxo4MVUv@rLljcrFRe612Wka1K@SS7wv5zJ1mt7ebw5MaAShQFUdoDsTkh4Dm38yU3/MZf@Bz/qg5CfVg2uBvfhTTxF68SRMH4/raRHtpc0YWAOLS44hJwjxhln2AhDfb/@vd4Hx7rZ1hTw@onmNelb6OXN5hflGWxUcxxrDMIS0fP05pIsyb4oz3V56PiMnJuzrpptk3bl1vuv@vyX6kR2Id@t@mfkn30HCImoFcwHsq24CEBm/I5SOlqnPTWEorp6GEioOanJtD9pvR7Cn5dHaA3sbktqYNoxEP6@Bj6KzoQksTiWVMLmPEa3CekvR7nHYrT5jo7bYztaXjPxSKlWd34zTc5TldeSjY3a9xiwQUgInXtUhJco41A53PWKI/2eEL" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>(post-processing: the matrix is joined and some whitespace is removed for readability)</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 20 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 2.5 bytes</h1>
 <pre><code>2ø^
