--- a/q/275909.html
+++ b/q/275909.html
@@ -26,14 +26,40 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>APLDyalog Unicode</td><td>241003T083724Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275913#275913">akamayu</a></td></tr>
-<tr d-ix="1"><td>009</td><td>Vyxal</td><td>241003T094230Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275915#275915">emanresu</a></td></tr>
-<tr d-ix="2"><td>044</td><td>JavaScript ES6</td><td>241003T025930Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275911#275911">Arnauld</a></td></tr>
-<tr d-ix="3"><td>041</td><td>Ruby</td><td>241003T091617Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275914#275914">G B</a></td></tr>
-<tr d-ix="4"><td>015</td><td>Uiua 0.13.0dev.2</td><td>241003T002534Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275910#275910">Tbw</a></td></tr>
-<tr d-ix="5"><td>018</td><td>Charcoal</td><td>241003T055940Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275912#275912">Neil</a></td></tr>
+<tr d-ix="0"><td>009</td><td>05AB1E</td><td>241004T070008Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275935#275935">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>009</td><td>APLDyalog Unicode</td><td>241003T083724Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275913#275913">akamayu</a></td></tr>
+<tr d-ix="2"><td>009</td><td>Vyxal</td><td>241003T094230Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275915#275915">emanresu</a></td></tr>
+<tr d-ix="3"><td>044</td><td>JavaScript ES6</td><td>241003T025930Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275911#275911">Arnauld</a></td></tr>
+<tr d-ix="4"><td>041</td><td>Ruby</td><td>241003T091617Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275914#275914">G B</a></td></tr>
+<tr d-ix="5"><td>015</td><td>Uiua 0.13.0dev.2</td><td>241003T002534Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275910#275910">Tbw</a></td></tr>
+<tr d-ix="6"><td>018</td><td>Charcoal</td><td>241003T055940Z</td><td><a href="https://codegolf.stackexchange.com/questions/275909/pad%c3%a9-approximant-of-expx/275912#275912">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup><strike>12</strike> 9 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 9 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>xs0)α!.»÷
+</code></pre>
+<p>Inputs in the order <span class="math-container">\$n,k\$</span>.</p>
+<p><a href="https://tio.run/##yy9OTMpM/f@/othA89xGRb1Duw9v///fjMsIAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##ATQAy/9vc2FiaWX/N8Odw6M4w7TDhWx2eXZ5PyIg4oaSICI/eWBz/3hzMCnEh86xIS7Cu8O3/yz/" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>x          # Double the first (implicit) input (without popping)
+           #  STACK: n,2n
+ s         # Swap the two values
+           #  STACK: 2n,n
+  0        # Push 0
+           #  STACK: 2n,n,0
+   )       # Wrap all values on the stack into a list
+           #  STACK: [2n,n,0]
+    α      # Get the absolute difference with the second (implicit) input
+           #  STACK: [abs(k-2n),abs(k-n),abs(k-0)], aka [2n-k,n-k,k]
+     !     # Get the factorial of each
+           #  STACK: [(2n-k)!,(n-k)!,k!]
+      .»   # Left-reduce this list by:
+        ÷  #  Integer-dividing
+           #   STACK: (2n-k)!/(n-k)!/k!
+           # (which is output implicitly as result)  
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup><strike>12</strike> 9 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>It takes <code>n</code> and <code>k</code> as its left and right arguments, respectively, then outputs the coefficient of <span class="math-container">\$x^k\$</span> in the <span class="math-container">\$n\$</span>-th approximant.
 It calculates <span class="math-container">\$\frac{n!}{k!}\cdot{2n-k\choose n-k} = \frac{n!}{k!}\cdot\frac{(2n-k)!}{n!(n-k)!} = \frac{(2n-k)!}{k!(n-k)!}\$</span>.</p>
 <pre><code>÷⍥!×-!⊣+-
@@ -47,7 +73,7 @@ It calculates <span class="math-container">\$\frac{n!}{k!}\cdot{2n-k\choose n-k}
 <p><a href="https://razetime.github.io/APLgolf/?h=C3nUNqH6Ue8uIPWoa/Gj7pZHXc0gvo66grrOo96ttfpAjgKQAUQgSv1R2yR1DYjYLjDaqlmroAAA&amp;c=O7z9Ue9SxcPTdRUfdS3W1gUA&amp;f=K1F41DZBIU0hREE9TZ3rUdtEICp51LP/0IpD6w21H/XueNQxQ@9R59JHvSse9W62BAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
 <p><a href="https://razetime.github.io/APLgolf/?h=C3nUNqH6Ue8uIPWoa/Gj7pZHXc0gvo66grrOo96ttfpAjgKQAUQgSv1R2yR1DYjYLjDaqlmroAAA&amp;c=01B81LVYW1fz8Hbdw9Mf9S4FchcBAA&amp;f=K1F41DZBIU0hREE9TZ3rUdtEICp51LP/0IpD6w21H/XueNQxQ@9R59JHvSse9W62BAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf! 12 bytes</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
 <pre><code>0&quot;$-+p¡ƒ/
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCIwXCIkLStwwqHGki8iLCIiLCI0XG4zIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -60,27 +86,27 @@ It calculates <span class="math-container">\$\frac{n!}{k!}\cdot{2n-k\choose n-k}
        ƒ/ # (2n-k)! / (n-k)! / k!
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>JavaScript (ES6), 44 bytes</h1>
+<div id="pu3" class="pu"><h1>JavaScript (ES6), 44 bytes</h1>
 <p>Expects <code>(n)(k)</code> and returns the corresponding coefficient.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>n=&gt;k=&gt;(g=n=&gt;n?n*g(n-1):1)(2*n-k)/g(k)/g(n-k)
 </code></pre>
 <p><a href="https://tio.run/##NY3BDoIwEETvfsWG0xakCkeh@CHGQ4OlQsmWAHoxfHvdajjszmzmTXbQb720cz@tOfmHCZ0KpBqnGrSKDV0ptUh5IS6FwDKl3ImTxd@KPnR@xtGsQKDgXLHUUJSsWSbgcwCImebsdq/42mn3px3UCoh1pwG0nF7LEzskwV9ELG08rafFj0aO3qKWg@8JkyMkEdjCFw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 41 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 41 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;n,k{eval [[1,*k...n+n-=k]*?*,*1..n]*?/}
 </code></pre>
 <p><a href="https://tio.run/##KypNqvyfZvtf1y5PJ7s6tSwxRyE62lBHK1tPTy9PO0/XNjtWy15LR8sQyAWy9Gv/awCZhgaaermJBdU1eTVcnAUKIKE8qEh2TVo00KjYWq7a/wA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 <p>Same formula as @Tbw, but 1-based to make it shorter.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua 0.13.0-dev.2</a>, <sup><strike></strike></sup>15 bytes <sup><a href="https://tinyurl.com/Uiua-SBCS-Sep-23" rel="nofollow noreferrer" title="SBCS for Uiua 0.13.0">SBCS</a></sup></h1>
+<div id="pu5" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua 0.13.0-dev.2</a>, <sup><strike></strike></sup>15 bytes <sup><a href="https://tinyurl.com/Uiua-SBCS-Sep-23" rel="nofollow noreferrer" title="SBCS for Uiua 0.13.0">SBCS</a></sup></h1>
 <pre><code>÷∩/×+1⊃⇡-:+1+⇡.
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_13_0-dev_2__Mgo0CsO34oipL8OXKzHiioPih6EtOisxK-KHoS4K" rel="nofollow noreferrer">Try on Uiua Pad!</a></p>
 <p>Takes <span class="math-container">\$n\$</span> and <span class="math-container">\$k\$</span> and outputs the coefficient of <span class="math-container">\$x^k\$</span> in the numerator of the <span class="math-container">\$n\$</span>th approximant. This is <span class="math-container">\$\frac{(2n-k)!}{k!(n-k)!}\$</span>.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 18 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 18 bytes</h1>
 <pre><code>ＮθＮηＩ÷Π⁻⊕…θ⊗θηΠ⊕…η
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6Fje7PfMKSkv8SnOTUos0CjWtuZD5GUB-QFFmXomGc2JxiYZnXolLZllmSqpGQFF-SmlyiYZvZl5pMVA8uSg1NzWvJDVFIygxLz1Vo1BHwSW_NCkHKFCoqamjkAHEMD2YqjM0wcB6SXFScjHUYcujlXTLcpRiF5soGEFEAA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation: Uses the same formula from @Tbw's answer.</p>
