--- a/q/275906.html
+++ b/q/275906.html
@@ -26,47 +26,22 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>150</td><td>Python 3</td><td>241003T121136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275918#275918">Jitse</a></td></tr>
-<tr d-ix="1"><td>102</td><td>JavaScript ES6</td><td>241003T205800Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275931#275931">Arnauld</a></td></tr>
-<tr d-ix="2"><td>025</td><td>Vyxal</td><td>241004T001655Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275933#275933">lyxal</a></td></tr>
-<tr d-ix="3"><td>195</td><td>Bash</td><td>241003T155715Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275923#275923">Themooni</a></td></tr>
+<tr d-ix="0"><td>182</td><td>Bash</td><td>241003T155715Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275923#275923">Themooni</a></td></tr>
+<tr d-ix="1"><td>150</td><td>Python 3</td><td>241003T121136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275918#275918">Jitse</a></td></tr>
+<tr d-ix="2"><td>102</td><td>JavaScript ES6</td><td>241003T205800Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275931#275931">Arnauld</a></td></tr>
+<tr d-ix="3"><td>025</td><td>Vyxal</td><td>241004T001655Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275933#275933">lyxal</a></td></tr>
 <tr d-ix="4"><td>007</td><td>Charcoal</td><td>241002T215157Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275907#275907">Neil</a></td></tr>
 <tr d-ix="5"><td>017</td><td>Jelly</td><td>241003T150222Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275921#275921">Unrelate</a></td></tr>
 <tr d-ix="6"><td>003</td><td>05AB1E</td><td>241003T095245Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275916#275916">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 150 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>f=lambda d,s,p={},c=0,*Y,S=sorted:s and f(d[1:]+[c.real],s[1:],{**p,c:s[0]},c+d[0],*Y,c.imag)or[[p.get(x+y*1j,' ')for y in S({*Y})]for x in S({0,*d})]
-</code></pre>
-<p><a href="https://tio.run/##lVPNcoIwEL77FFsvBAhWpjdmeAovdRgOKYk0DgKTpK2O@uw0y58i9lCYZD82u9/@ZKlP5rMq35pmFxfs8MEZcKppHZ@vNIvX1NvSTawrZQSPNLCSw47wJIxSP8lWSrAipRo/6dnzappFOlmn1tPnVqJztpIHlruVSpJ6lQtDjv7JC/fUAcfdVQpOIEvYkLO3vbopKo69wobmVtUYoY2GGMgCgCQkCP1w71L4E6QUlgyfpUunLjYqkAEjDHq/9QBaDRJUmWF5Vb4MHOgadgwPAq21YVJlTItZyH@AlgjadxL1bgVht@4y7kHYZ1J9C/WjpJFl/pRkWvi8AY/gFnFItve5Z50fYip@EPgX/7UV7yjsdrk1aNrzhygj80g83tr/8h/p52AobVreDNwKbS@olooVz3eszV0scIY5tddox7id3chWrIT@KoydYvvzUO1aDZoVshRo1p1GUCtZGuKh2hKIOnYcNO3UbvML" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p>-42 bytes thanks to UnrelatedString</p>
-<p>Takes complex numbers as input and returns a 2D array of characters</p>
-</div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 102 bytes</h1>
-<p>Expects <code>(directions)(characters)</code>, where <em>directions</em> is an array of <code>[dx,dy]</code> vectors and <em>characters</em> is a string. Returns a matrix of characters.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>d=&gt;s=&gt;[...d,m=[...d+=x=y=d.length].map(_=&gt;[...d].fill(&quot; &quot;))].map(([X,Y],i)=&gt;m[y][x]=s[x+=X,y+=Y,i])&amp;&amp;m
-</code></pre>
-<p><a href="https://tio.run/##bVLRbuIwEHznK7bWqbIbxxBK6UNl3u4fqIzvZCUmdRVsFEc9UNtvp/ZCKUKXUbyOZ3Z2V86reTOx7t12KH1o7GEtD41cRLlQQoiGbyTGQu7kXjais74dXrTYmC39e9JosXZdRwkQxo4MVUv@rLljcrFRe612Wka1K@SS7wv5zJ1mt7ebw5MaAShQFUdoDsTkh4Dm38yU3/MZf@Bz/qg5CfVg2uBvfhTTxF68SRMH4/raRHtpc0YWAOLS44hJwjxhln2AhDfb/@vd4Hx7rZ1hTw@onmNelb6OXN5hflGWxUcxxrDMIS0fP05pIsyb4oz3V56PiMnJuzrpptk3bl1vuv@vyX6kR2Id@t@mfkn30HCImoFcwHsq24CEBm/I5SOlqnPTWEorp6GEioOanJtD9pvR7Cn5dHaA3sbktqYNoxEP6@Bj6KzoQksTiWVMLmPEa3CekvR7nHYrT5jo7bYztaXjPxSKlWd34zTc5TldeSjY3a9xiwQUgInXtUhJco41A53PWKI/2eEL" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>(post-processing: the matrix is joined and some whitespace is removed for readability)</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 20 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 2.5 bytes</h1>
-<pre><code>2ø^
-</code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwiMsO4XiIsIiIsIlsxLDIsMyw0LDUsNiw3XVxuXCJvY3RhZ29uIVwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
-<p>Bitstring:</p>
-<pre><code>01000011111001001000
-</code></pre>
-<p>Same idea as the 05ab1e answer but without the need for explicit swapping (it uses overloads). Uses the built in canvas digraph with length 2.</p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="noreferrer">Bash</a>, 195 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 182 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>s=&quot;$1&quot;
 e='echo -en'
 shift
 $e &quot;\033[$#B\033[$#C&quot;
-for ((;i&lt;${#s};i++));{
+for d;{
 $e ${s:i:1}
-case $1 in
+case $d in
 7|0|1)$e &quot;\033[1A&quot;
 ;;&amp;
 0|4)$e &quot;\033[1D&quot;
@@ -76,18 +51,44 @@ case $1 in
 5|6|7)$e &quot;\033[2D&quot;
 ;;
 esac
-shift
+let i++
 }
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70kKbE4Y8GCpaUlaboWNw8X2yqpGCpxpdqqpyZn5CvopuapcxVnZKaVcKmkKijFGBgbR6soO0FpZyWutPwiBQ0N60wblWrl4lrrTG1tTU3rapBilepiq0wrw1qu5MRiIM9QITOPy7zGoMZQE26SoaMSl7W1GpdBjQmSoAtE0LjGpMYUSdgJImxaY1ZjjhA2AqvmSi1OTIa6sxbiFaiPYD4DAA" rel="noreferrer">Attempt This Online!</a></p>
-<p>makes heavy use of <a href="https://tldp.org/HOWTO/Bash-Prompt-HOWTO/x361.html" rel="noreferrer">terminal escape sequences</a>, and is the very first time I actually used fall-through switch statements anywhere!</p>
+<p><a href="https://ato.pxeger.com/run?1=m70kKbE4Y8GCpaUlaboWN7cV2yqpGCpxpdqqpyZn5CvopuapcxVnZKaVcKmkKijFGBgbR6soO0FpZyWutPwihRTrapCsSnWxVaaVYS1XcmIxkJeikJnHZV5jUGOoCddq6KjEZW2txmVQY4Ik6AIRNK4xqTFFEnaCCJvWmNWYI4SNwKq5UosTk7lyUksUMrW1uWohrod6AuYZAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>-13 bytes by looping with <code>for d</code> (implicit over all remaining args) instead of c-style loop.</p>
+<p>makes heavy use of <a href="https://tldp.org/HOWTO/Bash-Prompt-HOWTO/x361.html" rel="nofollow noreferrer">terminal escape sequences</a>, and is the very first time I actually used fall-through switch statements anywhere!</p>
 <p>provide the string as first argument (with quotes if it has spaces), then provide the numbers separated by spaces.</p>
 <p>since this only works on a terminal, here are a few screenshots (i've verified that all test cases work):</p>
-<p><a href="https://i.sstatic.net/WxYkUkAw.png" rel="noreferrer"><img src="https://i.sstatic.net/WxYkUkAw.png" alt="spiralspiral test case" /></a></p>
+<p><a href="https://i.sstatic.net/WxYkUkAw.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/WxYkUkAw.png" alt="spiralspiral test case" /></a></p>
 <p>notice the huge whitespace. instead of computing how much whitespace i'll need, i simply offset to the number of commands, that way even the worst case won't try to move outside of bounds (which will fail silently)</p>
-<p><a href="https://i.sstatic.net/ZXnsBVmS.png" rel="noreferrer"><img src="https://i.sstatic.net/ZXnsBVmS.png" alt="s s s s test case" /></a>
-<a href="https://i.sstatic.net/zxv2eB5n.png" rel="noreferrer"><img src="https://i.sstatic.net/zxv2eB5n.png" alt="overwriting test case" /></a>
-<a href="https://i.sstatic.net/Jpkt8GJ2.png" rel="noreferrer"><img src="https://i.sstatic.net/Jpkt8GJ2.png" alt="octagon! test case" /></a></p>
+<p><a href="https://i.sstatic.net/ZXnsBVmS.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/ZXnsBVmS.png" alt="s s s s test case" /></a>
+<a href="https://i.sstatic.net/zxv2eB5n.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/zxv2eB5n.png" alt="overwriting test case" /></a>
+<a href="https://i.sstatic.net/Jpkt8GJ2.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/Jpkt8GJ2.png" alt="octagon! test case" /></a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 150 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>f=lambda x,s,p={},c=0,*y,S=sorted:s and f(x[1:]+[c.real],s[1:],{**p,c:s[0]},c+x[0],*y,c.imag)or[[p.get(i+j*1j,' ')for j in S({*y})]for i in S({0,*x})]
+</code></pre>
+<p><a href="https://tio.run/##lVPNboMwDL73KbxeSCB0Rbsh8RS9TEIcMpqyIAooyTaqts/OYv5aynYoKPGHY3/@ialP5rMq39r2EBX8@LHn0DDN6uh8ZWm0Ze6J7SJdKSP2oQZe7uFAmjgIEy9ON0rwImEaP9nZdWuWhjreJtbTa6xE53QjjzyjlYrjepMJQ6SXu0HOHHDooVKQgyxhR87u6UoTVMhBYUM3VtUaoY2GCMgKgMTED7wgpwz@BQmDNcdnTdncxUYFMmKE/uC3HUGnQYIqNTyrypeRA12DnuFBoLU2XKqUa7EI@QToiKB7Z1Hvlh/06y7jAQRDJtW3UD9KGllmf5LMC1824BHcIo7JDj73rMtDTMXzfe/ivXbiHYXdLrcGzXv@EGVinoinW3su/4l@CcbS5uUtwK3Q7oJqqXjx94610dUKZ7hh9hrtGHezG9qKldBfhbFTbH8epqnVoFkhS4Fm/WkItZKlIS6qLYGoI8dB015N218" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>-42 bytes thanks to UnrelatedString</p>
+<p>Takes complex numbers as input and returns a 2D array of characters</p>
+</div>
+<div id="pu2" class="pu"><h1>JavaScript (ES6), 102 bytes</h1>
+<p>Expects <code>(directions)(characters)</code>, where <em>directions</em> is an array of <code>[dx,dy]</code> vectors and <em>characters</em> is a string. Returns a matrix of characters.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>d=&gt;s=&gt;[...d,m=[...d+=x=y=d.length].map(_=&gt;[...d].fill(&quot; &quot;))].map(([X,Y],i)=&gt;m[y][x]=s[x+=X,y+=Y,i])&amp;&amp;m
+</code></pre>
+<p><a href="https://tio.run/##bVLRbuIwEHznK7bWqbIbxxBK6UNl3u4fqIzvZCUmdRVsFEc9UNtvp/ZCKUKXUbyOZ3Z2V86reTOx7t12KH1o7GEtD41cRLlQQoiGbyTGQu7kXjais74dXrTYmC39e9JosXZdRwkQxo4MVUv@rLljcrFRe612Wka1K@SS7wv5zJ1mt7ebw5MaAShQFUdoDsTkh4Dm38yU3/MZf@Bz/qg5CfVg2uBvfhTTxF68SRMH4/raRHtpc0YWAOLS44hJwjxhln2AhDfb/@vd4Hx7rZ1hTw@onmNelb6OXN5hflGWxUcxxrDMIS0fP05pIsyb4oz3V56PiMnJuzrpptk3bl1vuv@vyX6kR2Id@t@mfkn30HCImoFcwHsq24CEBm/I5SOlqnPTWEorp6GEioOanJtD9pvR7Cn5dHaA3sbktqYNoxEP6@Bj6KzoQksTiWVMLmPEa3CekvR7nHYrT5jo7bYztaXjPxSKlWd34zTc5TldeSjY3a9xiwQUgInXtUhJco41A53PWKI/2eEL" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>(post-processing: the matrix is joined and some whitespace is removed for readability)</p>
+</div>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 20 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 2.5 bytes</h1>
+<pre><code>2ø^
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwiMsO4XiIsIiIsIlsxLDIsMyw0LDUsNiw3XVxuXCJvY3RhZ29uIVwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
+<p>Bitstring:</p>
+<pre><code>01000011111001001000
+</code></pre>
+<p>Same idea as the 05ab1e answer but without the need for explicit swapping (it uses overloads). Uses the built in canvas digraph with length 2.</p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 7 bytes</h1>
 <pre><code>ＧＨ✳✳Ａ²Ｓ
